--- a/SplitExpense/Base.lproj/Main.storyboard
+++ b/SplitExpense/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vQn-fc-rFu">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,132 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SplitExpense" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B64-sO-ESQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmA-wA-mDd">
+                                <rect key="frame" x="37.5" y="194" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Qss-T2-Ybd"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="Sgj-9v-tLj"/>
+                                </constraints>
+                                <color key="textColor" red="0.047911949459999999" green="0.58156424760000003" blue="0.90554922819999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="_layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="_layer.borderColor">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UOZ-kJ-7ke">
+                                <rect key="frame" x="37.5" y="331" width="300" height="40"/>
+                                <color key="backgroundColor" red="0.047911949459999999" green="0.58156424760000003" blue="0.90554922819999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="Ook-uA-lBU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="_layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mwi-IW-vvp">
+                                <rect key="frame" x="37.5" y="391" width="300" height="40"/>
+                                <color key="backgroundColor" red="0.047911949459999999" green="0.58156424760000003" blue="0.90554922819999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="BH2-RM-Bg5"/>
+                                    <constraint firstAttribute="height" constant="40" id="sfR-j2-aky"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="_layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share It" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Jg-gq-Qxr">
+                                <rect key="frame" x="141.5" y="119" width="92" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="VsV-Zd-cJx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.047911949459999999" green="0.58156424760000003" blue="0.90554922819999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0NI-v7-yaL">
+                                <rect key="frame" x="37" y="254" width="300" height="40"/>
+                                <color key="textColor" red="0.047911949459999999" green="0.58156424760000003" blue="0.90554922819999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="_layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="mwi-IW-vvp" firstAttribute="width" secondItem="UOZ-kJ-7ke" secondAttribute="width" id="1DE-8q-rC5"/>
+                            <constraint firstItem="VmA-wA-mDd" firstAttribute="top" secondItem="4Jg-gq-Qxr" secondAttribute="bottom" constant="35" id="2gC-ET-2BJ"/>
+                            <constraint firstItem="0NI-v7-yaL" firstAttribute="top" secondItem="VmA-wA-mDd" secondAttribute="bottom" constant="20" id="8yd-gv-XF9"/>
+                            <constraint firstItem="0NI-v7-yaL" firstAttribute="height" secondItem="VmA-wA-mDd" secondAttribute="height" id="95D-Xf-4cL"/>
+                            <constraint firstItem="mwi-IW-vvp" firstAttribute="top" secondItem="UOZ-kJ-7ke" secondAttribute="bottom" constant="20" id="Cbd-Eg-Zcv"/>
+                            <constraint firstItem="UOZ-kJ-7ke" firstAttribute="top" secondItem="0NI-v7-yaL" secondAttribute="bottom" constant="37" id="HkH-eP-rjW"/>
+                            <constraint firstItem="mwi-IW-vvp" firstAttribute="centerX" secondItem="B64-sO-ESQ" secondAttribute="centerX" id="SWB-vN-i0s"/>
+                            <constraint firstItem="VmA-wA-mDd" firstAttribute="centerX" secondItem="B64-sO-ESQ" secondAttribute="centerX" id="bBw-54-YWA"/>
+                            <constraint firstItem="0NI-v7-yaL" firstAttribute="leading" secondItem="VmA-wA-mDd" secondAttribute="leading" id="dNx-BM-JAu"/>
+                            <constraint firstItem="4Jg-gq-Qxr" firstAttribute="top" secondItem="Kl5-7u-oQz" secondAttribute="top" constant="55" id="h8h-R0-3E9"/>
+                            <constraint firstItem="0NI-v7-yaL" firstAttribute="width" secondItem="VmA-wA-mDd" secondAttribute="width" id="j96-76-UVF"/>
+                            <constraint firstItem="mwi-IW-vvp" firstAttribute="height" secondItem="UOZ-kJ-7ke" secondAttribute="height" id="kFl-YS-lEn"/>
+                            <constraint firstItem="UOZ-kJ-7ke" firstAttribute="centerX" secondItem="B64-sO-ESQ" secondAttribute="centerX" id="kG1-T6-SOe"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0NI-v7-yaL" secondAttribute="trailing" constant="20" symbolic="YES" id="kJN-RG-W4R"/>
+                            <constraint firstItem="4Jg-gq-Qxr" firstAttribute="centerX" secondItem="B64-sO-ESQ" secondAttribute="centerX" id="zRw-mI-7CB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Kl5-7u-oQz"/>
                     </view>
+                    <navigationItem key="navigationItem" id="JgU-v7-cqZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1020" y="-564"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HfB-ko-QOO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vQn-fc-rFu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eKD-Vn-vQX">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Z0R-aQ-OSd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pFt-v7-oXt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="200.80000000000001" y="-564.46776611694156"/>
         </scene>
     </scenes>
 </document>
