--- a/SplitExpense/Base.lproj/Main.storyboard
+++ b/SplitExpense/Base.lproj/Main.storyboard
@@ -94,6 +94,9 @@
                                         <integer key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="signupButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5ML-7g-RKX"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share It" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Jg-gq-Qxr">
                                 <rect key="frame" x="141.5" y="119" width="92" height="40"/>
@@ -137,6 +140,34 @@
             </objects>
             <point key="canvasLocation" x="1020" y="-564"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="m53-cE-T2a">
+            <objects>
+                <viewController storyboardIdentifier="DashBoardViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="opc-er-JTs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H6V-Pw-z16">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dashboard view" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP0-y8-FOp">
+                                <rect key="frame" x="153" y="319" width="123" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BP0-y8-FOp" firstAttribute="top" secondItem="S0T-5w-vJY" secondAttribute="top" constant="255" id="Tam-xy-DZA"/>
+                            <constraint firstItem="BP0-y8-FOp" firstAttribute="leading" secondItem="S0T-5w-vJY" secondAttribute="leading" constant="153" id="yPt-Ff-0eo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="S0T-5w-vJY"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="nMW-Bc-6EY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gmG-2S-27e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1909.5999999999999" y="111.0944527736132"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="HfB-ko-QOO">
             <objects>
@@ -154,6 +185,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pFt-v7-oXt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="200.80000000000001" y="-564.46776611694156"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="apE-e2-Fyb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0qe-nw-2n3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6ae-6R-yD8">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="opc-er-JTs" kind="relationship" relationship="rootViewController" id="syT-CA-lr5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YcD-sM-Vcy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="968.79999999999995" y="110.19490254872565"/>
         </scene>
     </scenes>
 </document>
