--- a/SplitExpense/Base.lproj/Main.storyboard
+++ b/SplitExpense/Base.lproj/Main.storyboard
@@ -552,6 +552,42 @@
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellWithTextField" id="Cjy-yO-zSN">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cjy-yO-zSN" id="Q6b-Hy-veC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQD-Su-cpC">
+                                            <rect key="frame" x="16" y="11" width="60" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0.0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="unQ-eU-noW">
+                                            <rect key="frame" x="252" y="6" width="107" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="107" id="2vf-Ni-UMg"/>
+                                            </constraints>
+                                            <color key="textColor" red="0.047911949455738068" green="0.58156424760818481" blue="0.90554922819137573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="eX1-XV-xsH" id="vPk-Qo-p8a"/>
+                                            </connections>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="unQ-eU-noW" secondAttribute="bottom" constant="7.5" id="5gC-Nh-s8a"/>
+                                        <constraint firstItem="unQ-eU-noW" firstAttribute="top" secondItem="Q6b-Hy-veC" secondAttribute="top" constant="6" id="IkH-II-3uV"/>
+                                        <constraint firstAttribute="trailing" secondItem="unQ-eU-noW" secondAttribute="trailing" constant="16" id="J40-kz-9Of"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="DQD-Su-cpC" secondAttribute="bottom" constant="1" id="Sd2-HE-9Ok"/>
+                                        <constraint firstItem="DQD-Su-cpC" firstAttribute="leading" secondItem="Q6b-Hy-veC" secondAttribute="leadingMargin" id="ZjY-az-lu4"/>
+                                        <constraint firstItem="DQD-Su-cpC" firstAttribute="top" secondItem="Q6b-Hy-veC" secondAttribute="topMargin" id="ceC-S3-qq1"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="eX1-XV-xsH" id="k9v-z9-ZxU"/>
@@ -564,7 +600,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9OR-Ei-hAP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2615" y="235"/>
+            <point key="canvasLocation" x="2613.5999999999999" y="234.33283358320841"/>
         </scene>
         <!--Users Table View Controller-->
         <scene sceneID="qro-iv-uCI">
