--- a/SplitExpense/Base.lproj/Main.storyboard
+++ b/SplitExpense/Base.lproj/Main.storyboard
@@ -383,7 +383,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HUE-21-Y1y">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HUE-21-Y1y">
                                 <rect key="frame" x="20" y="64" width="335" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTU-9Z-Fqm">
@@ -414,16 +414,14 @@
                                         <constraints>
                                             <constraint firstItem="NrK-A6-CjH" firstAttribute="centerX" secondItem="YTU-9Z-Fqm" secondAttribute="centerX" id="aOa-ao-Rtz"/>
                                             <constraint firstAttribute="bottom" secondItem="NrK-A6-CjH" secondAttribute="bottom" id="iU4-Zu-wDR"/>
+                                            <constraint firstAttribute="height" constant="87" id="is9-6c-8HC"/>
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E7H-TN-5rR">
-                                        <rect key="frame" x="0.0" y="87" width="335" height="461"/>
+                                        <rect key="frame" x="0.0" y="97" width="335" height="441"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="461" id="YF1-lc-WuS"/>
-                                        </constraints>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="79" id="UPw-dC-uMo">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="transactionCell" rowHeight="79" id="UPw-dC-uMo" customClass="TransactionTableViewCell" customModule="SplitExpense" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="28" width="335" height="79"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UPw-dC-uMo" id="w57-oM-D66">
@@ -456,15 +454,25 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="mOv-uf-vJa" firstAttribute="top" secondItem="w57-oM-D66" secondAttribute="topMargin" constant="18" id="3Lo-kp-5by"/>
-                                                        <constraint firstItem="mOv-uf-vJa" firstAttribute="leading" secondItem="w57-oM-D66" secondAttribute="leadingMargin" id="StN-pN-VvA"/>
+                                                        <constraint firstItem="mOv-uf-vJa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="w57-oM-D66" secondAttribute="leadingMargin" id="StN-pN-VvA"/>
+                                                        <constraint firstAttribute="trailing" secondItem="mOv-uf-vJa" secondAttribute="trailingMargin" constant="288.5" id="aIR-aR-seH"/>
                                                         <constraint firstAttribute="bottomMargin" secondItem="mOv-uf-vJa" secondAttribute="bottom" constant="18" id="lQp-zQ-yVS"/>
                                                         <constraint firstAttribute="trailingMargin" secondItem="0U3-h7-Hac" secondAttribute="trailing" constant="9.5" id="spN-we-Fga"/>
                                                         <constraint firstItem="0U3-h7-Hac" firstAttribute="centerY" secondItem="w57-oM-D66" secondAttribute="centerY" id="vHt-kw-9le"/>
                                                         <constraint firstItem="mOv-uf-vJa" firstAttribute="centerY" secondItem="w57-oM-D66" secondAttribute="centerY" id="wSk-FI-Qpb"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="amountTitle" destination="jyV-i3-SWf" id="4Pz-XT-es3"/>
+                                                    <outlet property="creditorTitle" destination="664-6w-4a4" id="euT-bg-czO"/>
+                                                    <outlet property="debitorTitle" destination="mOv-uf-vJa" id="pmA-Rt-2Lp"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="gGJ-Xa-vit" id="2eb-qn-gT8"/>
+                                            <outlet property="delegate" destination="gGJ-Xa-vit" id="qL9-bE-pIy"/>
+                                        </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qGD-It-NbU">
                                         <rect key="frame" x="0.0" y="548" width="335" height="55"/>
@@ -483,6 +491,7 @@
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="3mh-CM-0Yr"/>
                                             <constraint firstItem="Y0w-5Y-e6Z" firstAttribute="leading" secondItem="qGD-It-NbU" secondAttribute="leading" constant="8" id="Hty-eI-4Jb"/>
                                             <constraint firstItem="bMo-Xv-Zo9" firstAttribute="leading" secondItem="Y0w-5Y-e6Z" secondAttribute="trailing" constant="123" id="c9H-0X-s1c"/>
                                             <constraint firstAttribute="bottom" secondItem="Y0w-5Y-e6Z" secondAttribute="bottom" constant="13" id="fNf-hh-QmW"/>
@@ -494,7 +503,8 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="E7H-TN-5rR" firstAttribute="top" secondItem="HUE-21-Y1y" secondAttribute="top" constant="87" id="KIb-nH-Z8Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="E7H-TN-5rR" secondAttribute="trailing" id="UQ8-sy-5li"/>
+                                    <constraint firstItem="E7H-TN-5rR" firstAttribute="leading" secondItem="HUE-21-Y1y" secondAttribute="leading" id="fxm-I5-7Ee"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -516,12 +526,15 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="tableView" destination="E7H-TN-5rR" id="Xan-gL-qAf"/>
+                        <outlet property="viewModel" destination="jI5-iv-sxG" id="q9d-Yu-Uhz"/>
                         <segue destination="eX1-XV-xsH" kind="show" id="30t-CM-WWa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KuW-qD-48Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="jI5-iv-sxG" customClass="DashBoardViewModel" customModule="SplitExpense" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="1919" y="238"/>
+            <point key="canvasLocation" x="1917.5999999999999" y="237.93103448275863"/>
         </scene>
         <!--Add Transaction Table View Controller-->
         <scene sceneID="Yfc-Sp-N0e">
@@ -569,7 +582,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0.0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="unQ-eU-noW">
+                                        <textField opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="amount" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="unQ-eU-noW">
                                             <rect key="frame" x="252" y="6" width="107" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="107" id="2vf-Ni-UMg"/>
